# bilibili-notify

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Handoff.md  LICENSE  README.md  biome.json  knip.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts
.changeset/: additional-common-and-image-fixes.md  ai-subscription-log-refactor.md  astrbot-platform-and-commentary-provider.md  auth-status-controller-overhaul.md  bili-ai-command-and-debug-logs.md  client-type-fix.md  config.json  core-client-build.md  dynamic-template-config-drop-dynamic-url.md  five-poets-sneeze.md  fix-ai-deferred-tools-and-image-forward-order.md  fix-image-esm-unocss.md  fix-logger-jieba-close.md  fix-roomid-resolution.md  fix-wordcloud-and-live-badge.md  free-regions-march.md  gcm-at-rest-secrets.md  giant-wombats-drop.md  image-ui-improvements.md  imagegroup-subtree-and-overrides.md  koishi-cookie-encryption-key.md  koishi-image-hide-follower-rename.md  koishi-internals-protocol.md  koishi-internals-token.md  koishi-live-sc-guard-overrides.md  live-preflight-wbi-sign.md  live-restricted-room-preflight.md  live-sc-guard-filter-and-image-wordcloud.md  master-dm-reachability-fix.md  master-feature-refactor.md  monorepo-refactor-release.md  nice-hairs-create.md  p0-p3-review-fixes.md  p1-async-antipattern-pass.md  p1-secrets-io-hardening.md  (+10 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
(+417 files in other folders)
