[package]
name = "bilibili-notify-desktop"
version = "0.1.0-alpha.6"
description = "Desktop launcher for bilibili-notify"
authors = ["Akokko"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
nix = { version = "0.30.1", features = ["process", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2.4.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
